--- a/index.html
+++ b/index.html
@@ -365,6 +365,8 @@ html,body {
   padding: 4px;
   box-shadow: 0 4px 15px var(--shadow-color), 0 0 20px rgba(139, 92, 246, 0.6);
   transition: var(--transition-medium);
+  object-fit: contain;
+  box-sizing: border-box;
 }
 
 .logo:hover {
