deploy: 5119b7fef1660d188e5f73f40e68bb254a9e4fd9

--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@ button:active {
     <!-- Top Header with Search -->
     <header id="topHeader">
       <div class="header-left">
-        <img src="assets/logo.png" alt="Chromebook Unlocked Games Logo" class="logo" onclick="window.location.href='index.html'">
+        <img src="assets/logo.png" alt="Chromebook Unlocked Games Logo" class="header-logo" onclick="window.location.href='index.html'">
         <h1 onclick="window.location.href='index.html'">Chromebook Unlocked Games</h1>
       </div>
       <div id="searchContainer" role="search">
